--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=benpura
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://localhost:5432/quizdb
+spring.datasource.url=jdbc:postgresql://30307-36:5432/benpura
 spring.datasource.username=postgres
 spring.datasource.password=postgrestest
