--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,11 @@
+#spring.application.name=benpura
+#spring.datasource.driver-class-name=org.postgresql.Driver
+#spring.datasource.url=jdbc:postgresql://30307-36:5432/benpura
+#spring.datasource.username=postgres
+#spring.datasource.password=postgrestest
+
 spring.application.name=benpura
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.datasource.url=jdbc:postgresql://30307-36:5432/benpura
-spring.datasource.username=postgres
-spring.datasource.password=postgrestest
-
+spring.datasource.url=jdbc:postgresql://dpg-crb9uk3tq21c73cghib0-a.singapore-postgres.render.com:5432/benpura
+spring.datasource.username=benpura_user
+spring.datasource.password=sgnjmu3iavEvsBijKe40h34L0mxRXOBI
